--- a/less/responsive-767px-max.less
+++ b/less/responsive-767px-max.less
@@ -86,6 +86,21 @@
     padding: 0;
   }
 
+  // TYPOGRAPHY
+  // ----------
+  // Reset horizontal dl
+  .dl-horizontal {
+    dt {
+      float: none;
+      clear: none;
+      width: auto;
+      text-align: left;
+    }
+    dd {
+      margin-left: 0;
+    }
+  }
+
   // GRID & CONTAINERS
   // -----------------
   // Remove width from containers
